src/objects/Contract_Ratification_BU_Member__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contract__r.Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COPE_New_Amount__c</fullName>
        <label>COPE New Amount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COPE_Pledge__c</fullName>
        <description>Curretn COPE Pledge</description>
        <label>Current COPE Pledge</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Ratification BU Members</relationshipLabel>
        <relationshipName>Contract_Ratification_BU_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Rat_BU_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Rat BU ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Record_Id__c</fullName>
        <formula>Contract__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <inlineHelpText>Hover to view Contract Detail</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract_Ratification__c</referenceTo>
        <relationshipLabel>BU Members</relationshipLabel>
        <relationshipName>Contract_Ratification_BU_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inc_New_COPE__c</fullName>
        <formula>IF( Inc_or_New_COPE_Amount__c &gt; 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Increased/New COPE Sign Up #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inc_or_New_COPE_Amount__c</fullName>
        <formula>IF( COPE_New_Amount__c&gt;0  &amp;&amp; COPE_Pledge__c &gt; 0 , COPE_New_Amount__c - COPE_Pledge__c,COPE_New_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inc or New COPE Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <label>MemberID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Turned_Out_By__c</fullName>
        <label>Turned Out By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voted</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Ratification BU Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employer__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Voted__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>Stockton</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OCONNOR_HOSPITAL</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Voted__c</columns>
        <columns>COPE_New_Amount__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>OCONNOR HOSPITAL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SAINT_LOUISE_REGIONAL_HOSPITAL</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Voted__c</columns>
        <columns>COPE_New_Amount__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>SAINT LOUISE REGIONAL HOSPITAL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ST_FRANCIS_MEDICAL_CENTER</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Voted__c</columns>
        <columns>COPE_New_Amount__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>ST FRANCIS MEDICAL CENTER</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ST_VINCENT_MEDICAL_CENTER</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Voted__c</columns>
        <columns>COPE_New_Amount__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>ST VINCENT MEDICAL CENTER</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRB-{0000}</displayFormat>
        <label>Contract Rat BU Member No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Ratification BU Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>